bin/tests/errors/sema/sema_err_module_setup_only_directive_load.swg
#load("other.swg") // swc-expected-error {{sema_err_module_setup_only_directive}}
